# eGov-parser

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
egov-api/: lawdata.http  lawlist.http
egov-api/samples/: lawlists_20220930.xml  lawlists_20250224.xml
